--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 
     <!-- INTESTAZIONE -->
     <header>
-        
+        <h1>Il mio Viaggio a Londra</h1>
+        <img src="img/pexels-bill-emrich-230794-0.jpg" alt="immagine londra 0">
+        <img src="img/pexels-bill-emrich-230794-1.jpg" alt="immagine londra 1">
+        <img src="img/pexels-bill-emrich-230794-2.jpg" alt="immagine londra 2">
+        <hr>
     </header>
 
     <!-- PARTE CENTRALE -->
