--- a/index.html
+++ b/index.html
@@ -19,7 +19,86 @@
 
     <!-- PARTE CENTRALE -->
     <main>
+        <h2>Le mie spese</h2>
+        <table>
+            <!-- INTESTAZIONE TABELLA -->
+            <thead>
+                <tr>
+                    <th>Numero</th>
+                    <th>Descrizione</th>
+                    <th>Costo</th>
+                </tr>
+            </thead>
 
+            <!-- CORPO TABELLA -->
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120€</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120€</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120€</td>
+                </tr>
+            </tbody>
+
+            <!-- CHIUSURA TABELLA -->
+            <tfoot>
+                <tr>
+                    <td>Totale</td>
+                    <td></td>
+                    <td>360€</td>
+                </tr>
+            </tfoot>
+        </table>
+        <hr>
+        <h3>Cose da fare</h3>
+        <ul>
+            <li>Visitare la Tower of London &#10007;</li>
+            <li>Visitare Greenwich &#128504;</li>
+            <li>Ascoltare un artista di strada a Covent Garden &#128504;</li>
+            <li>Mangiare il tipico Fish and Chips inglese &#10007;</li>
+        </ul>
+        <hr>
+        <h2>Info utili:</h2>
+        <ol>
+
+            <!-- PUNTO UNO -->
+            <li>
+                Numeri utili di emergenza
+                <ul>
+                    <li><strong>999</strong> - Emergenza</li>
+                    <li><strong>101</strong> - Numero Polizia</li>
+                    <li><strong>111</strong> - Numero Assistenza Medica</li>
+                </ul>
+            </li>
+
+            <!-- PUNTO DUE -->
+            <li>
+                Hotel
+                <ul>
+                    <li><strong>Nome Hotel:</strong> Buckingham Palace</li>
+                    <li><strong>Indirizzo Hotel:</strong> Westminster, London WM1A 1AA, Regno Unito</li> 
+                </ul>
+            </li>
+
+            <!-- PUNTO TRE -->
+            <li>
+                Aereo
+                <ul>
+                    <li><strong>Volo di Andata:</strong> Y1234X, ore 9.30 da Milano Malpensa</li>
+                    <li><strong>Volo di Ritorno:</strong> Y1236X, ore 18.30 da London Heathrow</li> 
+                </ul>
+            </li>
+        </ol>
+        <hr>
     </main>
 
     <!-- FOOTER -->
