--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
 
     <!-- FOOTER -->
     <footer>
-
+        <h3>Le Foto</h3>
+        <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="prima foto">
+        <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="seconda foto">
     </footer>
 
 </body>
